Edited wiki page SpellTurbo through web user interface.

--- a/wiki/SpellTurbo.wiki
+++ b/wiki/SpellTurbo.wiki
@@ -1,4 +1,5 @@
-Increase Casters Speed by X % for Y seconds
+Details For Turbo Spell
 
-Mana Cost
-Cooldown time
+  * Increase Casters Speed by X % for Y seconds
+  * Mana Cost
+  * Cooldown time
